// Vitest Snapshot v1

exports[`plugins/stylus > should add stylus loader config correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/stylus-loader/dist/cjs.js",
                "options": {
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/stylus-loader/dist/cjs.js",
                "options": {
                  "sourceMap": true,
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.styl\\$/,
      },
    ],
  },
}
`;

exports[`plugins/stylus > should allow to configure stylus options 1`] = `
{
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "sideEffects": true,
            "test": /\\\\\\.module\\\\\\.\\\\w\\+\\$/i,
            "type": "css/module",
            "use": [
              {
                "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/stylus-loader/dist/cjs.js",
                "options": {
                  "sourceMap": true,
                  "stylusOptions": {
                    "lineNumbers": false,
                  },
                },
              },
            ],
          },
          {
            "sideEffects": true,
            "type": "css",
            "use": [
              {
                "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rspack/postcss-loader/src/index.js",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      [Function],
                      {
                        "browsers": [
                          "> 0.01%",
                          "not dead",
                          "not op_mini all",
                        ],
                        "info": [Function],
                        "options": {
                          "flexbox": "no-2009",
                          "overrideBrowserslist": [
                            "> 0.01%",
                            "not dead",
                            "not op_mini all",
                          ],
                        },
                        "postcssPlugin": "autoprefixer",
                        "prepare": [Function],
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/stylus-loader/dist/cjs.js",
                "options": {
                  "sourceMap": true,
                  "stylusOptions": {
                    "lineNumbers": false,
                  },
                },
              },
            ],
          },
        ],
        "test": /\\\\\\.styl\\$/,
      },
    ],
  },
}
`;
